looser/.stack-work/logs/crypto-api-0.13.3.log
Configuring crypto-api-0.13.3...
clang: warning: argument unused during compilation: '-nopie' [-Wunused-command-line-argument]
Preprocessing library for crypto-api-0.13.3..
Building library for crypto-api-0.13.3..
[ 1 of 11] Compiling Crypto.CPoly     ( Crypto/CPoly.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Crypto/CPoly.o )
[ 2 of 11] Compiling Crypto.Types     ( Crypto/Types.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Crypto/Types.o )
[ 3 of 11] Compiling Crypto.Classes[boot] ( Crypto/Classes.hs-boot, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Crypto/Classes.o-boot )
[ 4 of 11] Compiling Crypto.Modes[boot] ( Crypto/Modes.hs-boot, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Crypto/Modes.o-boot )
[ 5 of 11] Compiling Crypto.Util      ( Crypto/Util.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Crypto/Util.o )
[ 6 of 11] Compiling Crypto.Random    ( Crypto/Random.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Crypto/Random.o )
[ 7 of 11] Compiling Crypto.Classes   ( Crypto/Classes.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Crypto/Classes.o )
[ 8 of 11] Compiling Crypto.Padding   ( Crypto/Padding.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Crypto/Padding.o )
[ 9 of 11] Compiling Crypto.Modes     ( Crypto/Modes.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Crypto/Modes.o )
[10 of 11] Compiling Crypto.HMAC      ( Crypto/HMAC.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Crypto/HMAC.o )
[11 of 11] Compiling Crypto.Classes.Exceptions ( Crypto/Classes/Exceptions.hs, .stack-work/dist/x86_64-osx/Cabal-2.2.0.1/build/Crypto/Classes/Exceptions.o )
clang: warning: argument unused during compilation: '-nopie' [-Wunused-command-line-argument]

[;1mcbits/misc.c:5:26: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: '^' within '|' [-Wbitwise-op-parentheses]
            ret = ret | x[i] ^ y[i];
                      ~ ~~~~~^~~~~~[0m[0m
[;1m[34m  |[0m[0m
[;1m[34m5 |[0m[0m         ret = ret | x[i] [;1m[31m^[0m[0m y[i];
[;1m[34m  |[0m[0m[;1m[31m                          ^[0m[0m
[0m[0m[0m
[;1mcbits/misc.c:5:26: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     note: place parentheses around the '^' expression to silence this warning
            ret = ret | x[i] ^ y[i];
                             ^
                        (          )[0m[0m
[;1m[34m  |[0m[0m
[;1m[34m5 |[0m[0m         ret = ret | x[i] [;1m[31m^[0m[0m y[i];
[;1m[34m  |[0m[0m[;1m[31m                          ^[0m[0m
[0m[0m[0m1 warning generated.
clang: warning: argument unused during compilation: '-nopie' [-Wunused-command-line-argument]

[;1mcbits/misc.c:5:26: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     warning: '^' within '|' [-Wbitwise-op-parentheses]
            ret = ret | x[i] ^ y[i];
                      ~ ~~~~~^~~~~~[0m[0m
[;1m[34m  |[0m[0m
[;1m[34m5 |[0m[0m         ret = ret | x[i] [;1m[31m^[0m[0m y[i];
[;1m[34m  |[0m[0m[;1m[31m                          ^[0m[0m
[0m[0m[0m
[;1mcbits/misc.c:5:26: [;1m[31merror:[0m[0m[;1m[0m[0m[;1m
     note: place parentheses around the '^' expression to silence this warning
            ret = ret | x[i] ^ y[i];
                             ^
                        (          )[0m[0m
[;1m[34m  |[0m[0m
[;1m[34m5 |[0m[0m         ret = ret | x[i] [;1m[31m^[0m[0m y[i];
[;1m[34m  |[0m[0m[;1m[31m                          ^[0m[0m
[0m[0m[0m1 warning generated.
ignoring (possibly broken) abi-depends field for packages
Installing library in /Users/akona/.stack/snapshots/x86_64-osx/lts-12.7/8.4.3/lib/x86_64-osx-ghc-8.4.3/crypto-api-0.13.3-B4VnXuKqVy59W8frGMseXw
Registering library for crypto-api-0.13.3..
